--- a/src/index.css
+++ b/src/index.css
@@ -16,4 +16,9 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background: linear-gradient(
+    135deg,
+    var(--mantine-color-royal-0) 0%,
+    var(--mantine-color-royal-1) 100%
+  );
 }
